[package]
name = "libqaul-ipc"
description = "A client library for libqaul IPC interactions"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
libqaul = { version = "*", path = ".." }
libqaul-rpc = { version = "*", path = "../rpc" }