[package]
name = "qaul-platform"
description = "Platform specific abstraction utilities"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "GPL-3.0"

[features]
pc_linux = []
pc_macos = []
pc_windows = []
pc_generic = []

mobile_android = []
mobile_ios = []
mobile_generic = []

[dependencies]
